# open-pipe

./: .gitignore  .gitlab-ci.yml  DESIGN.md  LICENSE  README.md  ROADMAP.md  TODO.md  environment.yml  package.py  pyproject.toml  requirements-dev.txt  requirements.txt  rezbuild  run_tests.bash  run_tests.fish  run_tests.sh
.github/: codecov.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pack-environment.yaml  run-tests-on-mrs.yaml
openpipe/: config.py  constant.py  context.py  data.py  error.py  filesystem.py  log.py  naming.py  sequence.py  shot.py  show.py  source_me.bash  source_me.fish  templates.py
openpipe/configs/: aces_rec709_view.ocio  openpipe.toml  show_naming.json  show_naming.toml  show_naming.yml  templates.toml
openpipe/hooks/: env_vars.py  ftrack.py
openpipe/sanitization/: core.py
openpipe/show_scheme/: core.py
openpipe/test/: test_config.py  test_context.py  test_logging.py  test_naming.py  test_sanitization.py  test_show_scheme_core.py
openpipe_hooks/: __init__.py  env_vars.py  ftrack.py  ocio.py
tests/: conftest.py  pytest.ini  test_config.py  test_context.py  test_data.py  test_filesystem.py  test_log.py  test_naming.py  test_sanitization.py  test_sequence.py  test_shot.py  test_show.py  test_show_scheme_core.py  test_templates.py
tests/sample_files/configs/: sample_openpipe.toml  show_naming_compound_undefined_patterns.toml  wrong_openpipe_missing_root_path.toml  wrong_openpipe_missing_show_key.toml
tests/sample_files/schemas/: schema_with_wrong_indentation.openpipe
(+6 files in other folders)
